--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "piepe",
   "version": "1.0.0",
   "description": "Pipe your data in a stream-like API",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "node test.js"
+    "build": "webpack --config webpack.config.js",
+    "generate-declarations": "tsc"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,11 @@
   "bugs": {
     "url": "https://github.com/leunardo/piepe/issues"
   },
-  "homepage": "https://github.com/leunardo/piepe#readme"
+  "homepage": "https://github.com/leunardo/piepe#readme",
+  "devDependencies": {
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.2",
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5"
+  }
 }
