--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "test": "nyc jasmine"
+    "test": "nyc jasmine && npm run cov",
+    "cov": "coveralls coverage/lcov.info"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   "homepage": "https://github.com/leunardo/piepe#readme",
   "devDependencies": {
     "@types/jasmine": "^3.3.13",
+    "coveralls": "^3.0.5",
     "jasmine": "^3.4.0",
     "nyc": "^14.1.1",
     "ts-loader": "^6.0.4",
@@ -43,7 +45,8 @@
       "src/**/*.ts"
     ],
     "reporter": [
-      "text"
+      "text",
+      "lcovonly"
     ],
     "all": true
   }
