--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "test": "nyc jasmine && npm run cov",
-    "cov": "coveralls coverage/lcov.info"
+    "test": "nyc jasmine && nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -44,10 +43,7 @@
     "include": [
       "src/**/*.ts"
     ],
-    "reporter": [
-      "text",
-      "lcovonly"
-    ],
+    "reporter": ["text"],
     "all": true
   }
 }
