--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "piepe",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Pipe your data in a stream-like API",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "test": "nyc jasmine && nyc report --reporter=text-lcov | coveralls"
+    "test": "node node_modules/nyc/bin/nyc jasmine && node node_modules/nyc/bin/nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -23,15 +23,17 @@
   },
   "homepage": "https://github.com/leunardo/piepe#readme",
   "devDependencies": {
-    "@types/jasmine": "^3.3.13",
-    "coveralls": "^3.0.5",
-    "jasmine": "^3.4.0",
+    "@types/jasmine": "^3.5.11",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.3",
+    "coveralls": "^3.1.0",
+    "jasmine": "^3.5.0",
     "nyc": "^14.1.1",
-    "ts-loader": "^6.0.4",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.2",
-    "webpack": "^4.35.2",
-    "webpack-cli": "^3.3.5"
+    "ts-loader": "^6.2.2",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.6",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "nyc": {
     "extension": [
@@ -47,5 +49,6 @@
       "text"
     ],
     "all": true
-  }
+  },
+  "dependencies": {}
 }
